Added Example Project for Discordjs

--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -1,9 +1,5 @@
 {
   "extends": [
-    "airbnb-base", 
-    "airbnb-typescript/base"
-  ],
-  "parserOptions": {
-    "project": "./tsconfig.json"
-  }
+    "airbnb-base"
+  ]
 }
