--- a/api/package.json
+++ b/api/package.json
@@ -7,6 +7,10 @@
   "author": "Brenden (DevJinnial) <ancient.azem@gmail.com>",
   "license": "AGPL-3.0-or-later",
   "private": true,
+  "scripts": {
+    "dev": "node index.js",
+    "global-commands": "node generateCommands.js"
+  },
   "dependencies": {
     "@discordjs/builders": "^0.7.0",
     "@discordjs/rest": "^0.1.0-canary.0",
@@ -15,8 +19,6 @@
     "eslint-config-airbnb-base": "14.2.1"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-typescript": "^14.0.1",
     "eslint-plugin-import": "^2.22.1",
