--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,6 @@
     "firebase-admin": "^10.0.0",
     "firebase-functions": "^3.15.7",
     "firebase-functions-test": "^0.3.3",
-    "nuxt3": "latest"
+    "nuxt3": "^3.0.0-27245858.92547d8"
   }
 }
