--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,7 @@
     "indent": ["error", 4],
     "semi": [2, "never"],
     "consistent-return": [1],
-    "no-console": "off"
+    "no-console": "off",
+    "max-len": "off"
   }
 }
