--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "dependencies": {
     "@discordjs/builders": "^0.7.0",
     "@discordjs/rest": "^0.1.0-canary.0",
+    "aws-sdk": "^2.1012.0",
     "axios": "^0.23.0",
     "discord-api-types": "^0.24.0",
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
-    "eslint-config-airbnb-base": "14.2.1"
+    "eslint-config-airbnb-base": "14.2.1",
+    "firebase-admin": "^10.0.0"
   },
   "devDependencies": {
     "eslint": "^7.2.0",
