--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "eslint-config-airbnb-base": "14.2.1",
+    "firebase": "9.1.3",
     "firebase-admin": "^10.0.0"
   },
   "devDependencies": {
