--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "aws-sdk": "^2.1012.0",
     "axios": "^0.23.0",
     "discord-api-types": "^0.24.0",
+    "discord-together": "^1.3.25",
     "discord.js": "^13.2.0",
     "dotenv": "^10.0.0",
     "eslint-config-airbnb-base": "14.2.1",
